k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi-credit-app
  namespace: pi-credit
  labels:
    app: pi-credit
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pi-credit
  template:
    metadata:
      labels:
        app: pi-credit
    spec:
      containers:
        - name: pi-credit-app
          image: 015800952701.dkr.ecr.eu-north-1.amazonaws.com/pi-credit-app:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
